--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.CSS" />
+</head>
+<body>
+   
+    <h2>меню</h2>
+    <p><button>главная</button> <button>вторрая</button> <button>третия</button> <button>четвёртая</button></p>
+    
+    <h3>форма авторизации</h3>
+     <border: 2px>
+    <p>ваш логин: <input type="text"> </p>
+    <p>ваш пороль: <input type="text"> </p>
+    <button>авторизация</button>
+</border>
+</body>
+</html>
